# quant-stock-advisor

./: .dockerignore  .gitignore  Dockerfile  README.md  a.cpp  config.yaml  config.yaml.backtest  config.yaml.backtest.b4_s2_tiered_buffer_2040  config.yaml.backtest.f1_asset_turnover_blend_20  config.yaml.backtest.f1_gross_blend_20  config.yaml.backtest.f1_gross_single  config.yaml.backtest.f1_net_margin_blend_10  config.yaml.backtest.f1_net_margin_single  config.yaml.backtest.r3_s2_turnover05  config.yaml.backtest.r5_s2_prefilter_off  config.yaml.backtest.r9_p1_static_ref  config.yaml.backtest.s1_ocf  config.yaml.backtest.s2_vol  config.yaml.backtest.s3_dual_7030  config.yaml.backtest.s4_legacy3  config.yaml.backtest.vb3_20_35  config.yaml.example  environment.yml  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements.txt  tomli.py  算法改进.md  项目算法建模详解.md
configs/: README.md
docs/: README.md  alpha_expression_diagnostics_2026-04-20_v1.md  alpha_expression_scout_2026-04-20_realized_vol_grid.md  alpha_expression_scout_2026-04-20_smoke_short.md  alpha_expression_scout_debug.md  alpha_factor_scout_2026-04-23_shareholder_smoke.md  backtest_report.md  backtest_report_data.json  config_reference.md  coverage_width_validation_2026-04-20.md  coverage_width_validation_2026-04-20_followup.md  coverage_width_validation_2026-04-20_followup_small.md  current_families_fund_flow_shareholder_families_fund_flow-shareholder_flow_a_share_fund_flow_holder_a_share_shareholder_daily_a_share_daily_lag_30_width_100.md  factor_admission_validation_2026-04-20_next.md  factor_data_consistency.md  industry_map_quality_2026-04-28.md  industry_map_quality_2026-04-30.md  m2_5c_consistency_check_2026-04-20.md  m5_m13b_concept_delta_2026-05-07.md  m5_margin_delta_full_2026-05-06.md  m5_northbound_delta_full_2026-05-05.md  m5_northbound_test_2026-05-05.md  monthly_selection_dataset_2026-04-28.md  monthly_selection_dataset_2026-04-30.md  monthly_selection_dataset_2026_05_03.md  monthly_selection_dataset_2026_05_04.md  monthly_selection_m10_cost_pressure_2026-05-04.md  monthly_selection_m5_multisource_full_2026-04-29.md  monthly_selection_m5_multisource_pitfix_2026_05_03_2026_05_03.md  monthly_selection_m6_ltr_indzneutral_2026_05_04.md  monthly_selection_m6_ltr_pitfix_2026_05_03_2026_05_03.md  monthly_selection_m7_recommendation_report_2026-05-04.md  monthly_selection_m7_recommendation_report_pitfix_2026_05_03_2026-05-03.md  monthly_selection_oracle_2026-04-28.md  monthly_selection_w1_phase23_ic_gate_2026_05_09_2026-05-09.md  monthly_selection_w1_phase23_ic_gate_fast_2026_05_09_2026-05-09.md  monthly_selection_w1_phase23_ic_gate_quick_2026_05_09_2026-05-09.md  monthly_selection_w4_event_gate_2026_05_09_2026-05-09.md  newdata_quality_current_families_fund_flow-shareholder_flow_a_share_fund_flow_holder_a_share_shareholder_daily_a_share_daily_lag_30_width_100.md  newdata_quality_families_fund_flow-shareholder_flow_a_share_fund_flow_holder_a_share_shareholder_daily_a_share_daily_lag_30_width_100.md  (+34 more)
jetson/: torch-wheel.url
models/: train_baseline.py  train_deep_sequence.py  train_timeseries.py  train_xgboost.py
output/: a
results/: baseline_contract_test_2026-05-05_candidate_pool_reject_reason.csv  baseline_contract_test_2026-05-05_feature_importance.csv  baseline_contract_test_2026-05-05_industry_exposure.csv  baseline_contract_test_2026-05-05_leaderboard.csv  baseline_contract_test_2026-05-05_manifest.json  baseline_contract_test_2026-05-05_market_states.csv  baseline_contract_test_2026-05-05_monthly_long.csv  (+65 more)
scripts/: bootstrap_conda_env.sh  (+84 more)
(+386 files in other folders)
