[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-system"
version = "0.1.0"
description = "本地化 A 股量化流水线（AkShare + DuckDB + PyTorch 因子）"
readme = "README.md"
requires-python = ">=3.10,<3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
