[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-system"
version = "0.1.0"
description = "本地化 A 股量化流水线（AkShare + DuckDB + PyTorch 因子）"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "akshare>=1.14.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.1,<2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "ollama>=0.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 独立可执行脚本通过 sys.path.insert 后才能 import src.*，E402 为预期行为
"models/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
