[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-system"
version = "0.1.0"
description = "本地化 A 股量化流水线（AkShare + DuckDB + PyTorch 因子）"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "akshare>=1.14.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.1,<2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "mypy>=1.0", "ruff>=0.11.0", "types-PyYAML", "types-requests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
# 核心 pipeline 模块期望 ≥ 80%
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 独立可执行脚本通过 sys.path.insert 后才能 import src.*，E402 为预期行为
"models/*.py" = ["E402"]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

# 全局默认：暂不强制所有函数标类型（渐进式覆盖）
disallow_untyped_defs = false

# 核心模块白名单：已消灭 Any/无类型函数，强制严格检查
# P0-5: 渐进扩展覆盖范围，每季度新增 1–2 个模块
[[tool.mypy.overrides]]
module = [
    "src.pipeline.monthly_dataset",
    "src.features.ic_monitor",
    "src.data_fetcher.db_manager",
    "src.backtest.engine",
    "src.backtest.statistical_tests",
    "src.portfolio.optimizer",
    "src.portfolio.covariance",
    "src.portfolio.weights",
    "src.market.regime",
    "src.analysis.regime_sensitivity",
    "src.analysis.portfolio_method_compare",
    "src.analysis.capacity_report",
    "src.backtest.walk_forward",
]
disallow_untyped_defs = true
